不能事事如意
。

--- a/机器学习_马尔科夫链模型.md
+++ b/机器学习_马尔科夫链模型.md
@@ -15,25 +15,33 @@
 ##隐形马尔科夫模型
 --------------------------------
 隐形马尔科夫模型(HMM)是一个用来描述含有隐含未知参数的马尔可夫过程的统计模型。其难点是从可观察的参数中确定该过程的隐含参数。然后利用这些参数来作进一步的分析。<br>
+
+隐性马尔科夫模型由初始概率分布，状态转移概率分布以及观测概率分布确定。<br>
+
+隐性马尔科夫模型作了两个基本假设：<br>
+1 齐次马尔科夫假设，即假设因此的马尔科夫链在任意时刻t的状态只依赖于其前一时刻的状态，与其他时刻的状态以及观测无关。<br>
+2 观测独立性假设，即假设任意时刻的观测只依赖于该时刻的马尔科夫链的状态，与其他观测以及状态无关。<br>
+
 HMM是马尔科夫链中的一种，只是它的状态不能直接被观察到，但是可以通过观察向量间接的反映出来，即每一个观察向量由一个具有相应概率密度分布的状态序列产生，又由于每一个状态也是随机分布的，所以HMM是一个双重随机过程。
 <br>
 <br>
 某地只有两种天气：雨天和晴天。某人只做3件事：散步，购物，打扫卫生。
 做什么事，跟天气很有关系。<br>
 你知道这个地区的总的天气趋势,并且平时知道某人会做的事情。就是说这个隐马尔可夫模型的参数是已知的.<br>
->     states = Rainy,Sunny<br>
-     observations =walk, shop, clean<br>
-     start_probability =Rainy: 0.6, Sunny: 0.4<br>
-     <br>
-     transition_probability = {<br>
-          Rainy: {Rainy: 0.7, Sunny: 0.3},<br>
-          Sunny : {Rainy: 0.4, Sunny: 0.6},<br>
-      }<br>
-     emission_probability = {<br>
-          Rainy : {walk: 0.1, shop: 0.4, clean: 0.5},<br>
-          Sunny : {walk: 0.6, shop: 0.3, clean: 0.1},<br>
-      }<br>
+```
+    states = Rainy,Sunny
+     observations =walk, shop, clean
+     start_probability =Rainy: 0.6, Sunny: 0.4
    
+     transition_probability = {
+          Rainy: {Rainy: 0.7, Sunny: 0.3},
+          Sunny : {Rainy: 0.4, Sunny: 0.6},
+      }<br>
+     emission_probability = {
+          Rainy : {walk: 0.1, shop: 0.4, clean: 0.5},
+          Sunny : {walk: 0.6, shop: 0.3, clean: 0.1},
+      }
+```            
 可以观察到的状态序列和隐藏的状态序列是概率相关的。隐藏的状态和可观察到的状态之间有一种概率上的关系，也就是说某种隐藏状态 H 被认为是某个可以观察的状态 O1 是有概率的，假设为 P(O1 | H)。如果可以观察的状态有3种，那么很显然 P(O1 | H)+P(O2 | H)+ P(O3 | H) = 1。<br>
 HMM是语音识别，人体行为识别，文字识别等领域应用非常广泛。<br>
 <br>
