耐心是美德
rt

--- a/算法---常见小算法1.md
+++ b/算法---常见小算法1.md
@@ -120,6 +120,8 @@ while(small != big){
         small++;
 }
 ```
+若是说，在无序的数组中寻找两个和为指定值的元素，那么只需要通过O(nlogn)进行排序，之后再按照上述操作就可以了。<br>
+
 -------
 ##数组中出现次数超过一半的数字
 **题目：**数组中有一个数字出现的次数超过了数组长度的一半，找出这个数字。<br>
