--- a/算法---常见小算法2.md
+++ b/算法---常见小算法2.md
@@ -9,7 +9,7 @@
 17 快速排序<br>
 18 树的高度<br>
 19 输出链表的倒数第k个节点<br>
-20 <br>
+20 计算多边形面积<br>
 
 ----------------------------
 ##调整数组使奇数在偶数前面
@@ -356,3 +356,43 @@ int BTreeHight(根节点) {
 基于上面的思想：<br>
 1.指定一个新的指针p，走k步。如果k步之内就到了null，显然无倒数第k这说法，返回错误即可。<br>
 2.新指针p到位后，在初始节点再设定一个新的指针root，然后两个指针一起走。当p为null时，输出root所指的节点即可。<br>
+
+------------------
+##计算多边形面积
+**思想：**在多边形内部随意选取一点，利用海伦定理来求解三角形面积，把各个三角形面积相加。<br>
+```java
+public static void main(String[] args) throws Exception {
+        //把各个顶点的坐标按顺序写上。
+        //例如a(1,1) b(2,4) c(2,5) d(3,1)，则写为以下：注意：要是有多个点也可以，直接在大括号里面填写就行。
+        double[] array ={1,1,3,4,2,5,3,1};
+        
+        //自己把图形画出来，选一个在图形里面的点，例如(2,4)。注意，不为整数也可以，只要在里面就行。
+        double x = 2;
+        double y = 2;
+        
+        int len = array.length;
+        double sum =0;
+        
+        for(int i = 0 ;i<len;i+=2){
+            int temp = i;
+            double x1 = array[temp%len];
+            temp++;
+            double y1 = array[temp%len];
+            temp++;
+            double x2 = array[temp%len];
+            temp++;
+            double y2 = array[temp%len];
+            
+            //欧几里德定理确定边长。
+            double d1 = Math.sqrt((x-x1)*(x-x1)+(y-y1)*(y-y1));
+            double d2 = Math.sqrt((x-x2)*(x-x2)+(y-y2)*(y-y2));
+            double d3 = Math.sqrt((x2-x1)*(x2-x1)+(y2-y1)*(y2-y1));
+            
+            //海伦定理计算面积
+            double p = (d1+d2+d3)/2;
+            sum+= Math.sqrt(p*(p-d1)*(p-d2)*(p-d3));
+        
+        }        
+        System.out.println(len/2+"边形的面积为："+sum);
+}
+```
