几年前的愿望要达成了。
赞。

--- a/音频广告推送模型---日常开发记录1.md
+++ b/音频广告推送模型---日常开发记录1.md
@@ -559,3 +559,5 @@ curl  -s  "http://localhost:8080/musicad/ads?type=3&id=1"<br>
 ######（转载本站文章请注明作者和出处 <a href="https://github.com/MangoLiu">MangoLiu</a> ，请勿用于任何商业用途）
 
 
+hi,李昕：
+能和您预约个具体见面时间吗？智聪预约我明天中午13:00--14:00见面，若是时间允许，可否与您也见一面呢？谢谢，打扰了。
