--- a/我与两只猫的对话.md
+++ b/我与两只猫的对话.md
@@ -1,5 +1,5 @@
 #我与两只猫的对话
-![cat](/images/blog/cat.jpg)
+![cat](/images/blog/cat.jpg)<br>
 **一只猫对我说：“你跟我好好干，我以后封你为铲屎大将军。”<br>
 我心一动，这好歹也是将军啊。后来发现，我其实并不想铲屎。**<br>
 
