--- a/关于我.md
+++ b/关于我.md
@@ -25,5 +25,5 @@
 
 <strong>技术偏好:</strong><br>
 自认为Java写不少，但还没达到满意。<br>
-一直有学习机器学习。<br>
-目前也在学习shell。<br>
+目前在做LTR的相关性以及时序性相关工作。<br>
+目前也在学习shell和Python。<br>
