下面需要看看AC流程。

--- a/机器学习_线性回归.md
+++ b/机器学习_线性回归.md
@@ -30,8 +30,22 @@
 我们一次把所有的数据都考虑进来，称作是“**批处理**”：<br>
 ![公式4](/images/jiqixuexi/ML_LR_4.png)<br>
 这样做计算复杂度太高。我们可以使用一种新的方法，一次仅用一个样本来更新回归系数，称之为“**随机梯度上升算法**”。这是一种在线学习算法，进行增量式更新。<br>
+主要流程：<br>
+```
+读取训练数据;
+初始所需参数;
+while(终止条件)//通常设定为指定循环数目{
+    遍历数据集{
+        按照偏导数修改参数；
+    }
+    判断是否收敛{
+        收敛，则跳出；
+    }
+    更改终止条件自变量；
+}
 
-请看下例：<br>
+```
+请看下例python代码：<br>
 ```python
 # -*- coding:utf-8 -*-  
 """ 
@@ -91,9 +105,6 @@ print 'FINISH count:%s' % count
 
 ```
 
-
-
-
 可以考虑α随着迭代次数的增加，α逐渐减小，但仍要具有影响。<br>
 为了避免参数的严格下降也可考虑使用模拟退火等算法。<br>
 
@@ -101,16 +112,14 @@ print 'FINISH count:%s' % count
 
 
 --------------------------------
-最简单的线性回归<br>
-1 如何选择初始点,即初始参数值的确定？<br>
-2 如何防止过拟合？<br>
-3 如何选择合适的参数alpha？<br>
-4 最小二乘法和梯度下降法的区别是什么？<br>
-5 如何设计终止条件？<br>
-6 在上面的过程中有哪些可以优化的地方？<br>
-7 岭回归<br>
-8 牛顿法和拟牛顿法<br>
-9 在4和8提及方法有何本质区别？<br>
+问题：<br>
+* 如何选择初始点,即初始参数值的确定？<br>
+* 最小二乘法和梯度下降法是什么？<br>
+* 如何设计终止条件？<br>
+* 岭回归<br>
+* 牛顿法和拟牛顿法<br>
+* 不同的方法之间有何本质区别？<br>
+* 随机梯度下降和改进的随机梯度下降
 
 
 --------------------------------
