--- a/机器学习_线性回归.md
+++ b/机器学习_线性回归.md
@@ -119,7 +119,8 @@ print 'FINISH count:%s' % count
 * 岭回归<br>
 * 牛顿法和拟牛顿法<br>
 * 不同的方法之间有何本质区别？<br>
-* 随机梯度下降和改进的随机梯度下降
+* 随机梯度下降和改进的随机梯度下降。<br>
+
 
 
 --------------------------------
