--- a/机器学习_线性回归.md
+++ b/机器学习_线性回归.md
@@ -108,9 +108,10 @@ print 'FINISH count:%s' % count
 可以考虑α随着迭代次数的增加，α逐渐减小，但仍要具有影响。即修改步长，不然当接近极值点的时候，若是步长过长，又是只能走直线会导致来回在极值点周围转悠。<br>
 为了避免参数的严格下降也可考虑使用模拟退火等算法。<br>
 
-下面介绍一下**牛顿法**：<br>
-牛顿法和梯度下降法都是求解无约束最优化问题的常用方法，也是一种迭代算法。不同的是梯度下降法是利用一阶偏导数，而牛顿法是利用的二阶偏导数。<br>
-牛顿法会利用海赛矩阵，即对任意两个参数求二阶偏导。<br>
+##牛顿法
+牛顿法和梯度下降法都是求解无约束最优化问题的常用方法，也是一种迭代算法。
+不同的是梯度下降法是利用一阶偏导数，而牛顿法是利用的二阶偏导数。<br>
+牛顿法会利用海赛矩阵，即对任意参数求二阶偏导。<br>
 
 牛顿法是二阶收敛，梯度下降是一阶收敛，所以牛顿法就更快。<br>
 如果更通俗地说的话，比如你想找一条最短的路径走到一个盆地的最底部，梯度下降法每次只从你当前所处位置选一个坡度最大的方向走一步，牛顿法在选择方向时，不仅会考虑坡度是否够大，还会考虑你走了一步之后，坡度是否会变得更大。<br>
@@ -118,7 +119,7 @@ print 'FINISH count:%s' % count
 
 从几何上说，牛顿法就是用一个二次曲面去拟合你当前所处位置的局部曲面，而梯度下降法是用一个平面去拟合当前的局部曲面，通常情况下，二次曲面的拟合会比平面更好，所以牛顿法选择的下降路径会更符合真实的最优下降路径。<br>
 
-牛顿迭代与梯度下降法的不同之处在于多了一项二阶导数。这个二阶导数对算法的影响有两个方面，方向和大小。方向，二阶导数的几何含义是曲率，也就是迭代的时候是考虑到梯度下降的方向的。大小，每次迭代的步长是和陡度成反比的，越陡步长越小，平坦的时候步长越大。(请结合后面的公式来看)<br>
+这个二阶导数对算法的影响有两个方面，方向和大小。方向，二阶导数的几何含义是曲率，也就是迭代的时候是考虑到梯度下降的方向的。大小，每次迭代的步长是和陡度成反比的，越陡步长越小，平坦的时候步长越大。(请结合后面的公式来看)<br>
 
 梯度法相当于对原函数的泰勒一阶展开式逐次求极值，牛顿法是对二阶展开式求极值。<br>
 如果把Hessian矩阵的逆矩阵看成梯度法的alpha，就会发现它可以看成是一种不断改进下降梯度的梯度法。<br>
