路漫漫其修远兮
路漫漫其修远兮

--- a/机器学习_线性回归.md
+++ b/机器学习_线性回归.md
@@ -147,6 +147,9 @@ print 'FINISH count:%s' % count
 * 牛顿法和拟牛顿法<br>
 * 不同的方法之间有何本质区别？<br>
 * 随机梯度下降和改进的随机梯度下降。<br>
+* 梯度下降是一阶求导数，牛顿法是二阶求导，我们为什么不用三阶甚至更高呢？<br>
+
+
 
 
 
