--- a/机器学习_线性回归.md
+++ b/机器学习_线性回归.md
@@ -130,6 +130,27 @@ print 'FINISH count:%s' % count
 在实际迭代的过程中，需要对这个二阶偏导矩阵求逆矩阵，在计算起来会比较困难。因此会使用拟牛顿法来退而求其次，其基本思想就是用一个n阶矩阵来代替上述的海赛矩阵的逆矩阵。<br>
 
 
+##逻辑斯特回归
+* 如果代价函数是凸函数，那么就存在全局最优解，如果是非凸的，那么就会有很多局部最优的解。
+
+* Logistic regression可以用来回归，也可以用来分类，主要是二分类。不同于SVM告诉二分类的结果，LR告诉你这个样本属于正类的可能性是多少。用向量x表示输入，向量w表示参数，则逻辑斯特回归分类就是比较两个条件概率值的打小，将实例x分到值较大的那一类。
+![logistic](/images/jiqixuexi/ML_LOGIT1.png)
+
+* 万物的发生都可以用可能性或者几率（Odds）来表达。“几率”指的是某事物发生的可能性与不发生的可能性的比值。该事件的对数几率或是logit函数是：
+![logit](/images/jiqixuexi/ML_LOGIT2.png)
+
+* 在逻辑斯特回归模型中，输出Y=1的对数几率是输入x的线性函数。
+![w*x](/images/jiqixuexi/ML_LOGIT3.png)
+
+* logistic回归就是一个线性分类模型，它与线性回归的不同点在于：它将线性回归输出的很大范围的数，例如从负无穷到正无穷，压缩到0和1之间，这样的输出值表达为“可能性”。同时可以消除极端case的影响。所以说，LogisticRegression就是一个被logistic方程归一化后的线性回归，仅此而已。分类其实就是将回归的结果与特定阈值进行比较。
+
+* 我们需要用我们收集到的数据来训练求解得到它。那我们下一步要做的事情就是建立代价函数了。LogisticRegression最基本的学习算法是最大似然，最大释然就是我们的代价函数了。
+![l(w)](/images/jiqixuexi/ML_LOGIT4.png)<br>
+对数似然函数就是对似然函数取自然对数，然后化简。
+
+* 有代价函数，我们先尝试对上面的代价函数求导，看导数为0的时候可不可以解出来，若是有就可以直接求出最值了。。如果没有就需要通过迭代(如使用梯度下降法，牛顿法等)了，耗时耗力。
+
+
 
 
 
@@ -149,8 +170,9 @@ print 'FINISH count:%s' % count
 * 随机梯度下降和改进的随机梯度下降。<br>
 * 梯度下降是一阶求导数，牛顿法是二阶求导，我们为什么不用三阶甚至更高呢？<br>
 
-
-
+参考：<br>
+《统计学习方法》李航<br>
+[机器学习--逻辑斯特回归](http://blog.csdn.net/zouxy09/article/details/20319673)<br>
 
 
 --------------------------------
