--- a/机器学习_线性回归.md
+++ b/机器学习_线性回归.md
@@ -148,7 +148,7 @@ print 'FINISH count:%s' % count
 ![l(w)](/images/jiqixuexi/ML_LOGIT4.png)<br>
 对数似然函数就是对似然函数取自然对数，然后化简。
 
-* 有代价函数，我们先尝试对上面的代价函数求导，看导数为0的时候可不可以解出来，若是有就可以直接求出最值了。。如果没有就需要通过迭代(如使用梯度下降法，牛顿法等)了，耗时耗力。
+* 有代价函数，我们先尝试对上面的代价函数求导，看导数为0的时候可不可以解出来，若是有就可以直接求出最值了。如果没有就需要通过迭代(如使用梯度下降法，牛顿法等)了，耗时耗力。
 
 
 
@@ -171,8 +171,8 @@ print 'FINISH count:%s' % count
 * 梯度下降是一阶求导数，牛顿法是二阶求导，我们为什么不用三阶甚至更高呢？<br>
 
 参考：<br>
-《统计学习方法》李航<br>
-[机器学习--逻辑斯特回归](http://blog.csdn.net/zouxy09/article/details/20319673)<br>
+1《统计学习方法》李航<br>
+2 [机器学习--逻辑斯特回归](http://blog.csdn.net/zouxy09/article/details/20319673)<br>
 
 
 --------------------------------
