--- a/机器学习_线性回归.md
+++ b/机器学习_线性回归.md
@@ -166,6 +166,8 @@ print 'FINISH count:%s' % count
 * 不同的方法之间有何本质区别？<br>
 * 随机梯度下降和改进的随机梯度下降。<br>
 * 梯度下降是一阶求导数，牛顿法是二阶求导，我们为什么不用三阶甚至更高呢？<br>
+* 线性回归和非线性回归之间的关系。<br>
+
 
 参考：<br>
 1《统计学习方法》李航<br>
