做事要专注
专注做好一件事

--- a/机器学习_线性回归.md
+++ b/机器学习_线性回归.md
@@ -1,4 +1,4 @@
-﻿#机器学习--回归
+#机器学习--回归
 ##介绍
 线性回归属于监督学习的一种，用于模型为连续函数的数值预测。也可以利用回归方程来做二分类。<br>
 
@@ -177,3 +177,10 @@ print 'FINISH count:%s' % count
 --------------------------------
 ######（转载本站文章请注明作者和出处 <a href="https://github.com/MangoLiu">MangoLiu</a> ，请勿用于任何商业用途）
 
+
+str = "Line1-abcdef \nLine2-abc \nLine4-abcd";
+print str.split( );
+print str.split(' ', 1 );
+以上实例输出结果如下：
+
+['Line1-abcdef', 'Line2-abc', 'Line4-abcd']
