--- a/机器学习_神经网络.md
+++ b/机器学习_神经网络.md
@@ -1,9 +1,44 @@
 ﻿#机器学习--神经网络
-##介绍
---------------------------------
-感知机
-人工神经网络
-深度神经网络
+
+感知器就是一个最简单的单层前馈神经网络。<br>
+几个输入节点，一个输入节点。每个输入节点进行加权后求和，若是高于某阈值，则输出1，否则输入0。<br>
+![感知器](/images/jiqixuexi/ML_ANN1.png)<br>
+
+训练一个感知器模型就是不断调整链的权值，知道能满足关系为止。<br>
+具体算法如下:<br>
+![感知器算法](/images/jiqixuexi/ML_ANN2.png)<br>
+通过w=w+λ(目标值-预测值)来补偿误差。<br>
+这里的λ成为学习率。过大会比较敏感，太小会导致收敛过慢。可以使用一个自适应的λ值。<br>
+
+对于线性可分的分类问题，感知器学习算法保证收敛到最优解（只要学习率足够小，网上有关于它收敛性的证明）<br>
+```python
+#!/usr/bin/env python
+#encoding=utf-8
+#线性可分情况下的简单感知器模型
+a = 0.0001
+w = [0.3,0.2,0.2]
+data = [[1,0,0,-1],[1,0,1,1],[1,1,0,1],[1,1,1,1],[0,0,1,-1],[0,1,0,-1],[0,1,1,1],[0,0,0,-1]]
+
+while True:
+    flag = True
+    for line in data:
+        T = w[0]*line[0]+w[1]*line[1]+w[2]*line[2] - 0.4
+        T = 1 if T>0 else -1
+
+        if line[3]!=T:
+            flag = False
+       
+        for i in range(len(w)):
+            w[i] = w[i] + a*(line[3]-T)
+
+    if flag:
+        break
+
+print 'The result is :',
+for wi in w:
+    print wi,     
+```
+问题:这里的阈值t值怎样设定和调节的呢？<br>
 
 
 --------------------------------
