不会的太多了，但是得耐心
耐心是美德

--- a/机器学习_神经网络.md
+++ b/机器学习_神经网络.md
@@ -18,11 +18,12 @@
 a = 0.0001
 w = [0.3,0.2,0.2]
 data = [[1,0,0,-1],[1,0,1,1],[1,1,0,1],[1,1,1,1],[0,0,1,-1],[0,1,0,-1],[0,1,1,1],[0,0,0,-1]]
+YUZHI = 0.4
 
 while True:
     flag = True
     for line in data:
-        T = w[0]*line[0]+w[1]*line[1]+w[2]*line[2] - 0.4
+        T = w[0]*line[0]+w[1]*line[1]+w[2]*line[2] - YUZHI
         T = 1 if T>0 else -1
 
         if line[3]!=T:
