--- a/机器学习_神经网络.md
+++ b/机器学习_神经网络.md
@@ -83,7 +83,7 @@ for wi in w:
     b. 计算隐层及输出层输出；<br>
     c. 计算教师信号与实际值误差；<br>
     d. 累计c误差。<br>
-3)误差精度或循环次数达到要求则到5），否则到4）。<br>
+3）误差精度或循环次数达到要求则到5），否则到4）。<br>
 4）采用提高梯度法对任一神经元之间连接权及偏置进行调整，转回2）。<br>
 5）输出结果。<br>
 
