--- a/搜索引擎--策略示例.md
+++ b/搜索引擎--策略示例.md
@@ -49,3 +49,11 @@ A:term紧密度的问题。<br>
 语义改写
 doc命中
 主题
+用户点击率是有误差的，恶币驱良币
+点击
+term的平均命中问题
+Q = 魔兽世界地图
+T= 地图  T= 魔兽世界下载
+
+Q = linux 删除文件
+T= 删除文件 T = linux删除文件方法
