--- a/搜索引擎--策略示例.md
+++ b/搜索引擎--策略示例.md
@@ -44,6 +44,13 @@ Q:q="AB",title1="ABD",title2="BAD"
 A:term紧密度的问题。<br>
 <br>
 
+Q:q="AB",title1="ABD",title2="ABC"
+，哪个好？<br>
+示例：q="北大考研报名" ，title1="北大考研报名2011"，title2="北大考研报名2015"<br>
+同样是官网，同样是相关，但是时间越近越好的问题，即为时效性问题。<br>
+A:时效性问题。<br>
+<br>
+
 质量打压
 时效性
 语义改写
