--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -45,7 +45,9 @@
 因此特征T给系统带来的信息增益就可以写成系统原本的熵与固定特征T后的条件熵之差：<br>
 >![IG](/images/jiqixuexi/jueceshu_ig.PNG) <br>
 ```
-这个数据集来自Mitchell的机器学习，叫做是否去打网球play-tennis，其中6个变量依次为：编号、天气{Sunny、Overcast、Rain}、温度{热、冷、适中}、湿度{高、正常}、风力{强、弱}以及最后是否去玩的决策{是、否}。
+这个数据集来自Mitchell的机器学习，叫做是否去打网球play-tennis。
+其中6个变量依次为：编号、天气{Sunny、Overcast、Rain}、温度{热、冷、适中}、
+湿度{高、正常}、风力{强、弱}以及最后是否去玩的决策{是、否}。
 
 NO. , Outlook , Temperature , Humidity , Wind , Play 
 1 , Sunny , Hot , High , Weak , No 
@@ -65,7 +67,8 @@ NO. , Outlook , Temperature , Humidity , Wind , Play
 
 ```
 1 计算分类系统熵.
-类别是 是否出去玩。取值为yes的记录有9个，取值为no的有5个，即说这个样本里有9个正例，5 个负例，记为S(9+,5-)，S是样本的意思(Sample)。那么P(c1) = 9/14, P(c2) = 5/14
+类别是 是否出去玩。取值为yes的记录有9个，取值为no的有5个，即说这个样本里有9个正例，5个负例，
+记为S(9+,5-)，S是样本的意思(Sample)。那么P(c1) = 9/14, P(c2) = 5/14
 这里熵记为Entropy(S),计算公式为：
 Entropy(S)= -(9/14)*log2(9/14)-(5/14)*log2(5/14)。
 
@@ -79,7 +82,8 @@ Entropy(Strong)=-(3/6)*log(3/6)-(3/6)*log(3/6)=1.0
 3 现在就可以计算出相应的信息增益了：
 所以，对于一个Wind属性固定的分类系统的信息量为 (8/14)*Entropy(Weak)+(6/14)*Entropy(Strong)
 Gain(Wind)=Entropy(S)-(8/14)*Entropy(Weak)-(6/14)*Entropy(Strong)=0.940-(8/14)*0.811-(6/14)*1.0=0.048
-这个公式的奥秘在于，8/14是属性Wind取值为Weak的个数占总记录的比例，同样6/14是其取值为Strong的记录个数与总记录数之比。
+这个公式的奥秘在于，8/14是属性Wind取值为Weak的个数占总记录的比例，
+同样6/14是其取值为Strong的记录个数与总记录数之比。
 
 4 同理，如果以Humidity作为根节点：
 Entropy(High)=0.985 ; Entropy(Normal)=0.592
@@ -93,8 +97,11 @@ Gain(Temperature)=0.940-(4/14)*Entropy(Cool)-(4/14)*Entropy(Hot)-(6/14)*Entropy(
 这样我们就得到了以上四个属性相应的信息增益值：
 Gain(Wind)=0.048 ；Gain(Humidity)=0.151 ； Gain(Outlook)=0.247 ；Gain(Temperature)=0.029
 
-最后按照信息增益最大的原则选Outlook为根节点。子节点重复上面的步骤。这颗树可以是这样的，它读起来就跟你认为的那样：
+最后按照信息增益最大的原则选Outlook为根节点。子节点重复上面的步骤。
+这颗树可以是这样的，它读起来就跟你认为的那样：
+```
 >![demo](/images/jiqixuexi/jueceshu_demo.PNG) 
+
 
 ## 递归构建决策树
 --------------------------------
