--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -67,25 +67,33 @@ NO. , Outlook , Temperature , Humidity , Wind , Play
 ```
 
 1 计算分类系统熵.
-类别是 是否出去玩。取值为yes的记录有9个，取值为no的有5个，即说这个样本里有9个正例，5个负例，
-记为S(9+,5-)，S是样本的意思(Sample)。那么P(c1) = 9/14, P(c2) = 5/14
-这里熵记为Entropy(S),计算公式为：
+类别是 是否出去玩。取值为yes的记录有9个，取值为no的有5个，即说这个样本里有9个正例，5个负例，<br>
+记为S(9+,5-)，S是样本的意思(Sample)。那么P(c1) = 9/14, P(c2) = 5/14<br>
+这里熵记为Entropy(S),计算公式为：<br>
+```
 Entropy(S)= -(9/14)*log2(9/14)-(5/14)*log2(5/14)。
+```
 
 2 分别以Wind、Humidity、Outlook和Temperature作为根节点，计算其信息增益.
-我们来计算Wind的信息增益
-当Wind固定为Weak时：记录有8条，其中正例6个，负例2个；
-同样，取值为Strong的记录6个，正例负例个3个。我们可以计算相应的熵为：
+我们来计算Wind的信息增益：<br>
+当Wind固定为Weak时：记录有8条，其中正例6个，负例2个；<br>
+同样，取值为Strong的记录6个，正例负例个3个。我们可以计算相应的熵为：<br>
+```
 Entropy(Weak)=-(6/8)*log(6/8)-(2/8)*log(2/8)=0.811
 Entropy(Strong)=-(3/6)*log(3/6)-(3/6)*log(3/6)=1.0
+```
 
 3 现在就可以计算出相应的信息增益了：
-所以，对于一个Wind属性固定的分类系统的信息量为 (8/14)*Entropy(Weak)+(6/14)*Entropy(Strong)
+所以，对于一个Wind属性固定的分类系统的信息量为 :<br>
+```
+(8/14)*Entropy(Weak)+(6/14)*Entropy(Strong)
 Gain(Wind)=Entropy(S)-(8/14)*Entropy(Weak)-(6/14)*Entropy(Strong)=0.940-(8/14)*0.811-(6/14)*1.0=0.048
+```
 这个公式的奥秘在于，8/14是属性Wind取值为Weak的个数占总记录的比例，
-同样6/14是其取值为Strong的记录个数与总记录数之比。
+同样6/14是其取值为Strong的记录个数与总记录数之比。<br>
 
 4 同理，如果以Humidity作为根节点：
+```
 Entropy(High)=0.985 ; Entropy(Normal)=0.592
 Gain(Humidity)=0.940-(7/14)*Entropy(High)-(7/14)*Entropy(Normal)=0.151
 以Outlook作为根节点：
@@ -94,11 +102,12 @@ Gain(Outlook)=0.940-(5/14)*Entropy(Sunny)-(4/14)*Entropy(Overcast)-(5/14)*Entrop
 以Temperature作为根节点：
 Entropy(Cool)=0.811 ; Entropy(Hot)=1.0 ; Entropy(Mild)=0.918
 Gain(Temperature)=0.940-(4/14)*Entropy(Cool)-(4/14)*Entropy(Hot)-(6/14)*Entropy(Mild)=0.029
+```
 这样我们就得到了以上四个属性相应的信息增益值：
-Gain(Wind)=0.048 ；Gain(Humidity)=0.151 ； Gain(Outlook)=0.247 ；Gain(Temperature)=0.029
+Gain(Wind)=0.048 ；Gain(Humidity)=0.151 ； Gain(Outlook)=0.247 ；Gain(Temperature)=0.029<br>
 
-最后按照信息增益最大的原则选Outlook为根节点。子节点重复上面的步骤。
-这颗树可以是这样的，它读起来就跟你认为的那样：
+最后按照信息增益最大的原则选Outlook为根节点。子节点重复上面的步骤。<br>
+这颗树可以是这样的，它读起来就跟你认为的那样：<br>
 
 >![demo](/images/jiqixuexi/jueceshu_demo.PNG) 
 
