--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -9,24 +9,23 @@
 优点：复杂度不高，便于理解。<br>
 缺点：可能会产生过度匹配问题。<br>
 难点：<br>
->   1 如果有很多特征，选取哪些特征，按照什么顺序才能更好的进行分类？<br>
-    2 递归构造以及结束条件的判断。<br>
-    3 过度匹配问题的处理。<br>
-    4 通过训练集构造决策树，如何将其保存？<br>
+1 如果有很多特征，选取哪些特征，按照什么顺序才能更好的进行分类？<br>
+2 递归构造以及结束条件的判断。<br>
+3 过度匹配问题的处理。<br>
+4 通过训练集构造决策树，如何将其保存？<br>
 
 有兴趣可以先看看关于决策树的介绍：[决策树学习(wikipedia)](http://zh.wikipedia.org/wiki/%E5%86%B3%E7%AD%96%E6%A0%91%E5%AD%A6%E4%B9%A0)
 
 ## 划分数据集
 --------------------------------
 在学习如何选取最好的特征来划分数据之前，我们先来学习下<strong>熵</strong>(entropy)的概念。熵是集合信息的一种度量方式，可以表示划分数据集的前后信息发生的变化。它的公式为：<br>
->![熵](/images/jiqixuexi/jueceshu_shang.png)
+![熵](/images/jiqixuexi/jueceshu_shang.png)
 
 假设分类后，有C种结果，每种的概率为p(x)，结果切分的越均匀，entropy的值越大。所以，我们的目标是计算每一种特征的熵，选择最大值的特征，作为当前分类的判断节点。
 关于熵的介绍：[熵(wikipedia)](http://zh.wikipedia.org/wiki/%E4%BF%A1%E6%81%AF%E7%86%B5)
 
-
 另一种度量集合无序程度的方法是基尼不纯度，简单地说就是从一个数据集中随机选取子项，度量其被错误分类到其他分组的概率。基尼不纯度可以通过如下计算：
->![基尼不纯度](/images/jiqixuexi/jueceshu_jini.PNG) <br>
+![基尼不纯度](/images/jiqixuexi/jueceshu_jini.PNG) <br>
 
 然后。对每个特征划分一次数据集，计算数据集的新熵值，之后比较并返回最好特征划分的索引值。
 
@@ -43,7 +42,7 @@
 但是问题接踵而至，例如一个特征X，它可能的取值有n多种（x1，x2，……，xn）， 当计算条件熵而需要把它固定的时候，要把它固定在哪一个值上呢？答案是每一种可能都要固定一下，计算n个值，然后取均值才是条件熵。而取均值也不是简单的 加一加然后除以n，而是要用每个值出现的概率来算平均（简单理解，就是一个值出现的可能性比较大，固定在它上面时算出来的信息量占的比重就要多一些）。<br>
 
 因此特征T给系统带来的信息增益就可以写成系统原本的熵与固定特征T后的条件熵之差：<br>
->![IG](/images/jiqixuexi/jueceshu_ig.PNG) <br>
+![IG](/images/jiqixuexi/jueceshu_ig.PNG) <br>
 
 这个数据集来自Mitchell的机器学习，叫做是否去打网球play-tennis。
 其中6个变量依次为：编号、天气{Sunny、Overcast、Rain}、温度{热、冷、适中}、
@@ -66,8 +65,8 @@ NO. , Outlook , Temperature , Humidity , Wind , Play
 14 , Rain , Mild , High , Strong , No
 ```
 
-1 计算分类系统熵.
-类别是 是否出去玩。取值为yes的记录有9个，取值为no的有5个，即说这个样本里有9个正例，5个负例，<br>
+1 计算分类系统熵.<br>
+类别是 是否出去玩。取值为yes的记录有9个，取值为no的有5个，即说这个样本里有9个正例，5个负例，
 记为S(9+,5-)，S是样本的意思(Sample)。那么P(c1) = 9/14, P(c2) = 5/14<br>
 这里熵记为Entropy(S),计算公式为：<br>
 ```
@@ -103,13 +102,12 @@ Gain(Outlook)=0.940-(5/14)*Entropy(Sunny)-(4/14)*Entropy(Overcast)-(5/14)*Entrop
 Entropy(Cool)=0.811 ; Entropy(Hot)=1.0 ; Entropy(Mild)=0.918
 Gain(Temperature)=0.940-(4/14)*Entropy(Cool)-(4/14)*Entropy(Hot)-(6/14)*Entropy(Mild)=0.029
 ```
-这样我们就得到了以上四个属性相应的信息增益值：
+这样我们就得到了以上四个属性相应的信息增益值：<br>
 Gain(Wind)=0.048 ；Gain(Humidity)=0.151 ； Gain(Outlook)=0.247 ；Gain(Temperature)=0.029<br>
-
 最后按照信息增益最大的原则选Outlook为根节点。子节点重复上面的步骤。<br>
 这颗树可以是这样的，它读起来就跟你认为的那样：<br>
 
->![demo](/images/jiqixuexi/jueceshu_demo.PNG) 
+![demo](/images/jiqixuexi/jueceshu_demo.PNG) 
 
 
 ## 递归构建决策树
