--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -114,7 +114,7 @@ Gain(Wind)=0.048 ；Gain(Humidity)=0.151 ； Gain(Outlook)=0.247 ；Gain(Tempera
 **基尼不纯度**表示一个随机选中的样本在子集中被分错的可能性。基尼不纯度为**这个样本被选中的概率乘以它被分错的概率**。当一个节点中所有样本都是一个类时，基尼不纯度为零。<br>
 
 假设y的可能取值为{1, 2, ..., m},令fi是样本被赋予i的概率，则基尼指数可以通过如下计算：<br>
-![jini](/images/jiqixuexi/jueceshu_jini.PNG) <br>
+![jininew](/images/jiqixuexi/jueceshu_jininew.PNG) <br>
 ![jinidemo](/images/jiqixuexi/jueceshu_jinidemo.PNG) <br>
 ![jiniresult](/images/jiqixuexi/jueceshu_jiniresult.PNG) <br>
 
