文佳是我的榜样！
文佳是我的榜样！

--- a/机器学习_决策树.md
+++ b/机器学习_决策树.md
@@ -118,6 +118,20 @@ Gain(Wind)=0.048 ；Gain(Humidity)=0.151 ； Gain(Outlook)=0.247 ；Gain(Tempera
 ![jinidemo](/images/jiqixuexi/jueceshu_jinidemo.PNG) <br>
 ![jiniresult](/images/jiqixuexi/jueceshu_jiniresult.PNG) <br>
 
+##决策树的主要过程
+------------------------
+**特征选择**：特征选择是指从训练数据中众多的特征中选择一个特征作为当前节点的分裂标准，如何选择特征有着很多不同量化评估标准标准，从而衍生出不同的决策树算法。基于信息论的决策树算法有ID3、CART和C4.5等算法，其中C4.5和CART两种算法从ID3算法中衍生而来。
+
+**ID3算法**建立在“奥卡姆剃刀”的基础上：越是小型的决策树越优于大的决策树。**ID3算法中根据信息论的信息增益评估和选择特征**，每次选择信息增益最大的特征做判断模块。ID3算法可用于划分标称型数据集，没有剪枝的过程，为了去除过度数据匹配的问题，可通过裁剪合并相邻的无法产生大量信息增益的叶子节点（例如设置信息增益阀值）。**使用信息增益的话其实是有一个缺点，那就是它偏向于具有大量值的属性**--就是说在训练集中，某个属性所取的不同值的个数越多，那么越有可能拿它来作为分裂属性，而这样做有时候是没有意义的，另外ID3不能处理连续分布的数据特征，于是就有了C4.5算法。CART算法也支持连续分布的数据特征。
+
+**C4.5**是ID3的一个改进算法，继承了ID3算法的优点。**C4.5算法用信息增益率来选择属性，克服了用信息增**益选择属性时偏向选择取值多的属性的不足在树构造过程中进行剪枝；能够完成对连续属性的离散化处理；能够对不完整数据进行处理。C4.5算法产生的分类规则易于理解、准确率较高；但效率低，因树构造过程中，需要对数据集进行多次的顺序扫描和排序。也是因为必须多次数据集扫描，C4.5只适合于能够驻留于内存的数据集。
+
+**CART**算法的全称是Classification And Regression Tree，采用的是**Gini指数（选Gini指数最小的特征s）**作为分裂标准,同时它也是包含后剪枝操作。ID3算法和C4.5算法虽然在对训练样本集的学习中可以尽可能多地挖掘信息，但其生成的决策树分支较大，规模较大。为了简化决策树的规模，提高生成决策树的效率，就出现了根据GINI系数来选择测试属性的决策树算法CART。
+
+**决策树生成**： 根据选择的特征评估标准，从上至下递归地生成子节点，直到数据集不可分则停止决策树停止生长。 树结构来说，递归结构是最容易理解的方式。
+
+**剪枝**：决策树容易过拟合，一般来需要剪枝，缩小树结构规模、缓解过拟合。剪枝技术有预剪枝和后剪枝两种
+
 ## 递归构建决策树
 --------------------------------
 划分一次后，数据将向下传递到树分支的下个节点，在这个节点上，我们可以再次划分数据，因此我们可以采用递归的原则处理数据集。但递归总是要有结束条件的，这里的结束条件是什么呢？<br>
